# Autonomy-IFP-Optimizer

./: .gitignore  README.md  main.py  progress.md  pyproject.toml
examples/: drone_frame_cutout_avoidance.ipynb  robotic_limb_optimization.ipynb
outputs/drone_frame_demo/: ifp_kinematics.csv  ifp_kinematics.json  metrics.json  optimized_path.json
outputs/robotic_limb_demo/: ifp_kinematics.csv  ifp_kinematics.json  metrics.json  optimized_path.json
outputs/surrogate_smoke/: surrogate_dataset.npz  surrogate_metrics.json  surrogate_params.msgpack  surrogate_validation.npz
src/autonomy_ifp_optimizer/: __init__.py  cli.py  config.py  visualize.py
src/autonomy_ifp_optimizer/ai_surrogate/: __init__.py  train_flax_model.py
src/autonomy_ifp_optimizer/core/: __init__.py  constraints.py  fem.py  geometry.py  meshing.py  physics.py
src/autonomy_ifp_optimizer/export/: __init__.py  toolpath.py
tests/: test_membrane_fem.py  test_readme_assets.py  test_visual_exports.py
tools/: generate_readme_assets.py
