[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomy-ifp-optimizer"
version = "0.1.0"
description = "Differentiable IFP path planner with orthotropic membrane FEM, steering-radius, thickness-buildup, and keep-out constraints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "jaxlib",
    "optax",
    "flax",
    "gmsh",
    "numpy",
    "scipy",
    "trimesh",
    "pyvista",
    "matplotlib",
    "Pillow",
    "plotly",
]

[project.scripts]
autonomy-ifp-optimizer = "autonomy_ifp_optimizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
